--- a/flutter_tdd/pubspec.yaml
+++ b/flutter_tdd/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  flutter_launcher_icons: ^0.8.1
   cupertino_icons: ^0.1.3
   http:
 
@@ -27,3 +27,11 @@ flutter:
   uses-material-design: true
   assets:
     - assets/logo.png
+
+flutter_icons:
+  ios: true
+  android: true
+  image_path_android: assets/icons/android.png
+  image_path_ios: assets/icons/ios.png
+  adaptive_icon_background: assets/icons/background.png
+  adaptive_icon_foreground: assets/icons/foreground.png
