--- a/flutter_tdd/pubspec.yaml
+++ b/flutter_tdd/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_launcher_icons: ^0.8.1
   cupertino_icons: ^0.1.3
   http:
+  provider:
 
 dev_dependencies:
   flutter_test:
